add routes for landing page

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,16 +13,5 @@
     <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
   </head>
   
-  <body>
-    <skip-link-element></skip-link-element>
-    <header>      
-      <app-bar></app-bar>
-    </header>
-
-    <main id="mainContent" tabindex="0"></main>
-
-    <footer>
-      <footer-element></footer-element>
-    </footer>
-  </body>
+  <body id="mainContent" tabindex="0"></body>
 </html>
