--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,9 +5,8 @@
 @import 'propertise/mixins';
 @import 'propertise/helper';
 
-// @import 'components/appbar';
-// @import 'components/button';
-// @import 'components/restaurant';
+@import 'components/appbar';
+@import 'components/button';
 // @import 'components/footer';
 
 @import 'pages/pages-main';
