Co-authored-by: IrfandoAritonang <IrfandoAritonang@users.noreply.github.com> Co-authored-by: Nely Dwi Agustin <nee18@users.noreply.github.com>

--- a/src/styles/pages/_pages-main.scss
+++ b/src/styles/pages/_pages-main.scss
@@ -11,11 +11,9 @@
 // @import 'loginRegister/';
 
 // // Profile Page
-// @import 'profile/';
+@import 'profile/profile';
 // @import 'profile/';
 
 // // Tips Page
 // @import 'tips/';
 // @import 'tips/';
-
-
