--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,4 +1,76 @@
-<!DOCTYPE html>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+</head>
+
+<body>
+  <main class="container">
+    <h1 class="mb-5">Profil Saya</h1>
+
+    <section class="profil row container mb-5">
+      <div class="col-2">
+        <img src="..//public/images/Ellipse 5.png" alt="">
+      </div>
+      <div class="col-3">
+        <h2>Fajar Alfiantino</h2>
+        <p>asdfgh@jkl.com</p>
+      </div>
+    </section>
+
+    <section class="kelola row container">
+      <h2>Kelola</h2>
+      <div class="pemasukan col-3 text-center">
+        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#kelolaPemasukan">
+          <h3>Kategori Pemasukan</h3>
+        </button>
+
+        <div class="modal fade" id="kelolaPemasukan" tabindex="-1" aria-labelledby="exampleModalLabel"
+          aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title" id="exampleModalLabel">Overview</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <h5>${title}</h5>
+                <p class="card-text">${release_date}</p>
+                <p>${overview}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="dompet col-3 text-center">
+        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#kelolaDompet">
+          <h3>Dompet</h3>
+        </button>
+      </div>
+      <div class="pengeluaran col-3 text-center">
+        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#kelolaPengeluaran">
+          <h3>Kategori Pengeluaran</h3>
+        </button>
+      </div>
+    </section>
+  </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.1/dist/iconify-icon.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
+</body>
+
+</html>
+
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -7,10 +79,10 @@
     <meta name="Description" content="Maneyfy, Manage your Money Easily">
 
     <title>Maneyfy | Manage your Money Easily</title>
-    <link rel="manifest" href="./manifest.json">
+    <link rel="manifest" href="./manifest.json"> -->
 
-    <!-- IMPORT ICON -->
-    <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
+<!-- IMPORT ICON -->
+<!-- <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
   </head>
   
   <body>
@@ -25,4 +97,4 @@
       <footer-element></footer-element>
     </footer>
   </body>
-</html>
+</html> -->
