--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,7 +5,7 @@
 @import 'propertise/mixins';
 @import 'propertise/helper';
 
-@import 'components/appbar';
+@import 'components/app-bar';
 @import 'components/button';
 // @import 'components/footer';
 
