--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,5 +13,15 @@
     <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
   </head>
   
-  <body id="mainContent" tabindex="0"></body>
+  <body id="mainContent" tabindex="0">
+    <div class="brand_logo">
+      <a href="index.html">
+        <picture>
+          <!-- <source type="image/webp" srcset="${CONFIG.IMAGE_BRAND_LOGO_PATH}.webp">
+          <source type="image/png" srcset="${CONFIG.IMAGE_BRAND_LOGO_PATH}.png"> -->
+          <img src="../public/images/logo-title-black.png" alt="Maneyfy">
+        </picture>
+      </a>
+    </div>
+  </body>
 </html>
