--- a/src/styles/propertise/_variabels.scss
+++ b/src/styles/propertise/_variabels.scss
@@ -25,4 +25,6 @@ $background-font-income: #3bab96;
 $background-amount-wallet: #779eb8;
 $background-font-outcome: #d56e57;
 
+$background-landing:#EEF7FF;
+
 $background-dropdown-month: #d0e3ee;
