--- a/src/styles/pages/landing/_appbar.scss
+++ b/src/styles/pages/landing/_appbar.scss
@@ -1,6 +1,6 @@
-header {
+.header {
  position: fixed !important;
- background-color: var(--bgColorHeaderFooter);
+ background-color: var(--background-landing);
  width: 100%;
  z-index: 1000;
  padding: 0 15px 0 5px;
@@ -10,15 +10,26 @@ header {
  }
 }
 
-app-bar {
+
+.app-bar {
+ // display: grid;
+ // grid-template-columns: 1fr 2fr;
+ // align-items: center;
+ // position: sticky;
+ padding: 8px 16px;
+ background-color: #EEF7FF;
  display: grid;
- grid-template-columns: 1fr 2fr;
- align-items: center;
+ color: white;
+ grid-template-columns: auto 1fr auto;
+ gap: 10px;
  position: sticky;
+ top: 0;
+ z-index: 99;
  
- img {
-   height: 60px;        
+ .logo {
+  height: 50px;
  }
+ 
 
  .hamburger{
    display: block;
@@ -104,18 +115,19 @@ app-bar {
 
 .nav_item {
  display: grid;
- margin: 20px 0px;
+ margin: 20px;
  align-content: center;
  text-transform: uppercase;
 
  a {
    padding: 12px 27px;
    text-decoration: none;
-   color: var(--primary);
+   color: #404040;
+   font-weight: bold;
    transition: 0.3s;
 
    &:hover {
-     color: white;
+     color: black;
    }
 
    &:focus-visible {
