--- a/src/styles/pages/landing/_hero.scss
+++ b/src/styles/pages/landing/_hero.scss
@@ -1,28 +1,57 @@
-.hero {
- display: flex;
- align-items: center;
- min-height: 380px;
- width: 100%;
- text-align: center;
- // background-image: url("../images/hero.jpg");
- background-position: center;
- background-color: green;
+/*
+ * headline
+ */
+
+ .headline {
+  overflow: auto;
 }
 
-.hero__inner {
- margin: 0 auto;
- max-width: 800px;
+.headline__figure {
+  width: 450px;
+  float: left;
 }
 
-.hero__title {
- color: #fff;
- font-weight: 500;
- font-size: 36px;
+.headline__figure img {
+  width: 100%;
 }
 
-.hero__tagline {
- color: #fff;
- margin-top: 16px;
- font-size: 18px;
- font-weight: 300;
+.headline__figure figcaption {
+  text-align: center;
+  color: #666666;
+  font-size: 13px;
+  font-weight: 400;
+  margin-top: 8px;
+}
+
+.headline__content {
+  width: 600px;
+  float: left;
+  padding: 16px 32px;
+}
+
+.headline__title {
+  font-size: 32px;
+  font-weight: 500;
+}
+
+.headline__description {
+  font-size: 16px;
+  margin-top: 12px;
+}
+
+.headline__button {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  margin-top: 24px;
+  cursor: pointer;
+  padding: 8px 16px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  background-color: #2c3e50;
+  transition: opacity 0.3s;
+}
+
+.headline__button:hover {
+  opacity: 0.8;
 }
