--- a/src/styles/pages/landing/_appbar.scss
+++ b/src/styles/pages/landing/_appbar.scss
@@ -12,10 +12,10 @@
 
 
 .app-bar {
- // display: grid;
- // grid-template-columns: 1fr 2fr;
- // align-items: center;
- // position: sticky;
+ display: grid;
+ grid-template-columns: 1fr 2fr;
+ align-items: center;
+ position: sticky;
  padding: 8px 16px;
  background-color: #EEF7FF;
  display: grid;
