--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,7 +13,7 @@
     <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
   </head>
   
-  <body id="mainContent" tabindex="0">
+  <body class="container" id="mainContent" tabindex="0">
     <header class="header">
       <div class="app-bar">
         <div class="brand_logo">
@@ -40,17 +40,19 @@
     </header>
     
     
-
-    <div class="headline mt-5">
-      <div class="headline__content">
-        <h1 class="headline__title">#Kelola keuanganmu dalam satu tempat</h1>
-        <p class="headline__description">Merekap, Melacak, Mengontrol, hingga mengubah<br> kebiasaan dalam mengelola keuangan dengan Maneyfy.</p>
-        <button class="headline__button">Read More</button>
+    <div class="heros">
+      <div class="headline">
+        <div class="headline__content">
+          <h1 class="headline__title">Kelola keuanganmu dalam satu tempat</h1>
+          <p class="headline__description">Merekap, Melacak, Mengontrol, hingga mengubah<br> kebiasaan dalam mengelola keuangan dengan Maneyfy.</p>
+          <button class="headline__button">Read More</button>
+        </div>
+        <figure class="headline__figure">
+          <img src="..//public/images/heros/hero-large.png" alt="Maneyfy-Hero-Image">
+        </figure>
       </div>
-      <figure class="headline__figure">
-        <img src="..//public/images/heros/hero-large.png" alt="Maneyfy-Hero-Image">
-      </figure>
     </div>
+    
 
   </body>
 </html>
