--- a/src/styles/propertise/_variabels.scss
+++ b/src/styles/propertise/_variabels.scss
@@ -15,8 +15,8 @@ $font-color-grey: #404040;
 $background-very-light-blue: #eff7ff;
 $background-light-blue: #accbec;
 
-$icon-active: #3c91ea;
-$icon-active-background: #d7edfe;
+$icon-active: #0093ed;
+$icon-active-background: #D4EEFF;
 
 $background-wallet: #779eb8;
 $background-logout: #c75957;
