--- a/src/styles/pages/landing/_hero.scss
+++ b/src/styles/pages/landing/_hero.scss
@@ -29,7 +29,8 @@
 
 .headline__title {
   font-size: 68px;
-  font-weight: 500;
+  font-weight:700;
+  color: #404040;
 }
 
 .headline__description {
