--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -43,7 +43,7 @@
     <div class="heros">
       <div class="headline">
         <div class="headline__content">
-          <h1 class="headline__title">Kelola keuanganmu dalam satu tempat</h1>
+          <h1 class="headline__title">Kelola keuanganmu <br>dalam satu tempat</h1>
           <p class="headline__description">Merekap, Melacak, Mengontrol, hingga mengubah<br> kebiasaan dalam mengelola keuangan dengan Maneyfy.</p>
           <button class="headline__button">Read More</button>
         </div>
@@ -52,6 +52,22 @@
         </figure>
       </div>
     </div>
+
+    <div class="fitur">
+      <h1 class="title__main">Kenapa Memilih Maneyfy ?</h1>
+      <div class="container main-fitur">
+        <div class="headline">
+          <div class="headline__content">
+            <h1 class="title-fitur1">Tambahkan dompet <br>sesukamu</h1>
+            <p class="headline__description">Merekap, Melacak, Mengontrol, hingga mengubah<br> kebiasaan dalam mengelola keuangan dengan Maneyfy.</p>
+          </div>
+          <figure class="headline__figure">
+            <img src="..//public/images/heros/hero-large.png" alt="Maneyfy-Hero-Image">
+          </figure>
+        </div>
+      </div>
+    </div>
+    
     
 
   </body>
