--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,6 +9,7 @@
     <title>Maneyfy | Manage your Money Easily</title>
     <link rel="manifest" href="./manifest.json">
 
+    
     <!-- IMPORT ICON -->
     <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
   </head>
@@ -55,19 +56,52 @@
 
     <div class="fitur">
       <h1 class="title__main">Kenapa Memilih Maneyfy ?</h1>
-      <div class="container main-fitur">
-        <div class="headline">
-          <div class="headline__content">
-            <h1 class="title-fitur1">Tambahkan dompet <br>sesukamu</h1>
-            <p class="headline__description">Merekap, Melacak, Mengontrol, hingga mengubah<br> kebiasaan dalam mengelola keuangan dengan Maneyfy.</p>
+      <div class="main-fitur">
+          <div class="fitur__content">
+            <h1 class="title-fitur1">Tambahkan dompet<br>sesukamu</h1>
+            <p class="fitur__description">Kamu bisa menambahkan dompet tanpa batas<br>untuk memisahkan setiap kebutuhanmu.</p>
           </div>
-          <figure class="headline__figure">
-            <img src="..//public/images/heros/hero-large.png" alt="Maneyfy-Hero-Image">
+          <figure class="fitur__figure">
+            <img src="..//public/images/fitur/fitur-1.png" alt="Maneyfy-Hero-Image">
           </figure>
-        </div>
       </div>
+
+      <div class="main-fitur">
+        <div class="fitur__content-right">
+          <h1 class="title-fitur1">Tambahkan dompet<br>sesukamu</h1>
+          <p class="fitur__description">Kamu bisa menambahkan dompet tanpa batas<br>untuk memisahkan setiap kebutuhanmu.</p>
+        </div>
+        <figure class="fitur__figure">
+          <img src="..//public/images/fitur/fitur-2.png" alt="Maneyfy-Hero-Image">
+        </figure>
+      </div>
+
+      <div class="main-fitur">
+        <div class="fitur__content">
+          <h1 class="title-fitur1">Tambahkan dompet<br>sesukamu</h1>
+          <p class="fitur__description">Kamu bisa menambahkan dompet tanpa batas<br>untuk memisahkan setiap kebutuhanmu.</p>
+        </div>
+        <figure class="fitur__figure">
+          <img src="..//public/images/fitur/fitur-3.png" alt="Maneyfy-Hero-Image">
+        </figure>
+      </div>
+
+      <div class="main-fitur">
+        <div class="fitur__content-right">
+          <h1 class="title-fitur1">Tambahkan dompet<br>sesukamu</h1>
+          <p class="fitur__description">Kamu bisa menambahkan dompet tanpa batas<br>untuk memisahkan setiap kebutuhanmu.</p>
+        </div>
+        <figure class="fitur__figure">
+          <img src="..//public/images/fitur/fitur-4.png" alt="Maneyfy-Hero-Image">
+        </figure>
+      </div>
+
     </div>
+
+
     
+
+
     
 
   </body>
