--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,7 +7,7 @@
 @import 'propertise/helper';
 
 @import 'pages/landing/appbar';
-@import 'pages/landing//fitur';
+@import 'pages/landing/fiturImageRight';
 @import 'pages/landing/hero';
 @import 'components/button';
 // @import 'components/footer';
