--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -68,18 +68,18 @@
 
       <div class="main-fitur">
         <div class="fitur__content-right">
-          <h1 class="title-fitur1">Tambahkan dompet<br>sesukamu</h1>
-          <p class="fitur__description">Kamu bisa menambahkan dompet tanpa batas<br>untuk memisahkan setiap kebutuhanmu.</p>
+          <h1 class="title-fitur1">Lihat laporan pencatatan<br>dengan mudah</h1>
+          <p class="fitur__description">Riwayat pencatatan didesain agar kamu dapat<br>mengetahui laporan pencatatan dengan<br>mudah setiap bulannya.</p>
         </div>
-        <figure class="fitur__figure">
+        <figure class="fitur__figure report_img">
           <img src="..//public/images/fitur/fitur-2.png" alt="Maneyfy-Hero-Image">
         </figure>
       </div>
 
       <div class="main-fitur">
         <div class="fitur__content">
-          <h1 class="title-fitur1">Tambahkan dompet<br>sesukamu</h1>
-          <p class="fitur__description">Kamu bisa menambahkan dompet tanpa batas<br>untuk memisahkan setiap kebutuhanmu.</p>
+          <h1 class="title-fitur1">Kategori membantumu<br>lebih fokus</h1>
+          <p class="fitur__description">Anda dapat mengelompokkan pencatatan berdasarkan kategori.<br>Selain itu kamu juga dapat menambahkan kategori<br>baru sesuai kebutuhanmu.</p>
         </div>
         <figure class="fitur__figure">
           <img src="..//public/images/fitur/fitur-3.png" alt="Maneyfy-Hero-Image">
@@ -88,8 +88,8 @@
 
       <div class="main-fitur">
         <div class="fitur__content-right">
-          <h1 class="title-fitur1">Tambahkan dompet<br>sesukamu</h1>
-          <p class="fitur__description">Kamu bisa menambahkan dompet tanpa batas<br>untuk memisahkan setiap kebutuhanmu.</p>
+          <h1 class="title-fitur1">Ubah kebiasaan buruk dalam mengatur keuangan</h1>
+          <p class="fitur__description">Maneyfy dapat memberikan kamu tips dan saran, sehingga membantu kamu tetap konsisten<br>dalam mengelola keuangan.</p>
         </div>
         <figure class="fitur__figure">
           <img src="..//public/images/fitur/fitur-4.png" alt="Maneyfy-Hero-Image">
@@ -98,7 +98,42 @@
 
     </div>
 
+    <div class="daftar">
+      <div class="heading">
+        <div class="heading__daftar">
+          <h1 class="heading__title">Nikmati kemudahan dalam<br>melakukan pencatatan<br>keuangan bersama Maneyfy</h1>
+          <button class="heading__button">Daftar Sekarang</button>
+        </div>
+        <figure class="heading__figure">
+          <img src="..//public/images/fitur/growth.png" alt="Maneyfy-Hero-Image">
+        </figure>
+      </div>
+    </div>
 
+    <!-- <footer>
+      <p><a href="#">Copyright ©2022 Maneyfy</p>
+    </footer> -->
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-sm-6 col-xs-12">
+            <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by 
+              <a href="#">Scanfcode</a>.
+            </p>
+          </div>
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <ul class="social-icons">
+              <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+              <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+              <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
+              <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
     
 
 
