--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,4 +1,4 @@
-<!-- <!doctype html>
+<!doctype html>
 <html lang="en">
 
 <head>
@@ -10,138 +10,13 @@
 
 </head>
 
-<body>
-  <main class="container">
-    <h1 class="titlePage mb-5 pt-3">Profil Saya</h1>
-
-    <section class="profil mb-5 row">
-      <div class="col-lg-2 col-sm-4 col-5">
-        <img class="img-fluid" src="..//public/images/Ellipse 5.png" alt="">
-      </div>
-      <div class="col-lg-3 col-sm-6 col-7 desc">
-        <p class="name">Fajar Alfiantino</p>
-        <p class="email">asdfgh@jkl.com</p>
-      </div>
-    </section>
-
-    <section class="kelola row">
-      <h2>Kelola</h2>
-      <div class="pemasukan col-12 col-sm-12 col-lg-3 text-center">
-        <button type="button" class="btn titleKelola" data-bs-toggle="modal" data-bs-target="#kelolaPemasukan">
-          Kategori Pemasukan
-        </button>
-
-        <div class="modal fade" id="kelolaPemasukan" tabindex="-1" aria-labelledby="exampleModalLabel"
-          aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h4 class="modal-title" id="exampleModalLabel">Logo</h4>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <h5>Kategori Pendapatan</h5>
-                <ul class="list-group list-group-horizontal">
-                  <li class="list-group-item flex-fill">Makan&Minum</li>
-                  <li class="list-group-item">
-                    <button type="button" class="btn btn-transparent" onclick="console.log('edit')">
-                      <iconify-icon icon="material-symbols:edit"></iconify-icon>
-                    </button>
-                  </li>
-                  <li class="list-group-item">
-                    <button type="button" class="btn btn-transparent" onclick="console.log('delete')">
-                      <iconify-icon icon="mdi:trash"></iconify-icon>
-                    </button>
-                  </li>
-                </ul>
-                <ul class="list-group list-group-horizontal">
-                  <li class="list-group-item flex-fill">Makan&Minum</li>
-                  <li class="list-group-item">
-                    <button type="button" class="btn btn-transparent" onclick="console.log('edit')">
-                      <iconify-icon icon="material-symbols:edit"></iconify-icon>
-                    </button>
-                  </li>
-                  <li class="list-group-item">
-                    <button type="button" class="btn btn-transparent" onclick="console.log('delete')">
-                      <iconify-icon icon="mdi:trash"></iconify-icon>
-                    </button>
-                  </li>
-                </ul>
-                <div class="button">
-                  <button type="button" class="btn like" data-bs-toggle="modal" data-bs-target="#tambahPemasukan">
-                    <p class="tambah">+</p>
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="modal fade" id="tambahPemasukan" tabindex="-1" aria-labelledby="exampleModalLabel"
-          aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h4 class="modal-title" id="exampleModalLabel">Tambah Kategori Pemasukan</h4>
-                <button type="button" class="btn-close" data-bs-toggle="modal"
-                  data-bs-target="#kelolaPemasukan"></button>
-              </div>
-              <div class="modal-body">
-                <form>
-                  <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Nama Kategori</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                  </div>
-                  <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="dompet col-12 col-sm-12 col-lg-3 text-center">
-        <button type="button" class="btn titleKelola" data-bs-toggle="modal" data-bs-target="#kelolaDompet">
-          Dompet
-        </button>
-      </div>
-      <div class="pengeluaran col-12 col-sm-12 col-lg-3 text-center">
-        <button type="button" class="btn titleKelola" data-bs-toggle="modal" data-bs-target="#kelolaPengeluaran">
-          Kategori Pengeluaran
-        </button>
-      </div>
-    </section>
-  </main>
-
-  <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.1/dist/iconify-icon.min.js"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-    crossorigin="anonymous"></script>
-</body>
-
-</html> -->
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="Description" content="Maneyfy, Manage your Money Easily">
-
-  <title>Maneyfy | Manage your Money Easily</title>
-  <link rel="manifest" href="./manifest.json">
-
-  <link rel="preload" as="style" onload="this.rel = 'stylesheet'"
-    href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
-
-  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-</head>
-
 <body id="body-pd" tabindex="0">
 </body>
 
 <script src="https://code.iconify.design/3/3.0.0/iconify.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.1/dist/iconify-icon.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
 </html>
