fix desain landing_page

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,12 +9,14 @@
     <title>Maneyfy | Manage your Money Easily</title>
     <link rel="manifest" href="./manifest.json">
 
-    
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> -->
+
     <!-- IMPORT ICON -->
     <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
   </head>
   
-  <body class="container" id="mainContent" tabindex="0">
+  <body class="" id="mainContent" tabindex="0">
     <header class="header">
       <div class="app-bar">
         <div class="brand_logo">
@@ -46,7 +48,7 @@
         <div class="headline__content">
           <h1 class="headline__title">Kelola keuanganmu <br>dalam satu tempat</h1>
           <p class="headline__description">Merekap, Melacak, Mengontrol, hingga mengubah<br> kebiasaan dalam mengelola keuangan dengan Maneyfy.</p>
-          <button class="headline__button">Read More</button>
+          <button class="headline__button">Pelajari</button>
         </div>
         <figure class="headline__figure">
           <img src="..//public/images/heros/hero-large.png" alt="Maneyfy-Hero-Image">
@@ -109,35 +111,10 @@
         </figure>
       </div>
     </div>
-
-    <!-- <footer>
-      <p><a href="#">Copyright ©2022 Maneyfy</p>
-    </footer> -->
-
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 col-sm-6 col-xs-12">
-            <p class="copyright-text">Copyright &copy; 2022 All Rights Reserved by 
-              <a href="#">Maneyfy</a>.
-            </p>
-          </div>
-
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <ul class="social-icons">
-              <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-              <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
-            </ul>
-          </div>
-        </div>
-      </div>
-    </footer>
     
-
-
-    
+      <footer>
+        <p><a href="https://www.linkedin.com/in/irfando-irfando-331a17232/">Copyright 2022 - Maneyfy </p>
+      </footer>
 
   </body>
 </html>
