--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,6 @@
+// @import 'bootstrap';
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css');
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 
@@ -10,6 +13,7 @@
 @import 'pages/landing/hero';
 @import 'pages/landing/fiturImageRight';
 @import 'pages/landing/daftarSekarang';
+@import 'pages/landing/footer';
 @import 'components/button';
 // @import 'components/footer';
 
@@ -30,6 +34,7 @@ html {
 body {
   width: 100%;
   scroll-behavior: smooth;
+  background-color: var(--background-landing);
   position: relative;
   min-height: 100vh;
 }
