--- a/src/styles/pages/landing/_hero.scss
+++ b/src/styles/pages/landing/_hero.scss
@@ -40,15 +40,16 @@
 }
 
 .headline__button {
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
+  font-weight: 700;
   margin-top: 24px;
   cursor: pointer;
   padding: 8px 16px;
   color: white;
   border: none;
   border-radius: 5px;
-  background-color: #2c3e50;
+  background-color: #42B2FA;
   transition: opacity 0.3s;
 }
 
