--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css');
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css');
+@import url('https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css');
+
 @import 'propertise/variabels';
 @import 'propertise/mixins';
 @import 'propertise/helper';
 
-// @import 'components/appbar';
+@import 'components/side-bar';
 // @import 'components/button';
 // @import 'components/restaurant';
 // @import 'components/footer';
@@ -34,190 +38,4 @@ main {
   margin: 0;
   padding: 0;
   background-color: $background-very-light-blue;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
-:root {
-  --header-height: 3rem;
-  --nav-width: 300px;
-  --first-color: #ffffff;
-  --first-color-light: #000000;
-  --white-color: #0093ed;
-  // --body-font: "Nunito", sans-serif;
-  --normal-font-size: 1rem;
-  --z-fixed: 100;
-}
-
-*,
-::before,
-::after {
-  // padding: 0;
-  // margin: 0;
-  box-sizing: border-box;
-}
-
-.large {
-  font-size: 1.5rem;
-}
-
-body {
-  position: relative;
-  margin: var(--header-height) 0 0 0;
-  // padding: 0;
-  background-color: $background-very-light-blue;
-  font-family: 'Montserrat', sans-serif;
-  font-size: var(--normal-font-size);
-  transition: 0.5s;
-}
-
-a {
-  text-decoration: none;
-}
-
-.header {
-  width: 100%;
-  height: var(--header-height);
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 1rem;
-  background-color: $background-very-light-blue;
-  z-index: var(--z-fixed);
-  transition: 0.5s;
-}
-
-.header_toggle {
-  color: black;
-  font-size: 1.5rem;
-  cursor: pointer;
-}
-
-.header_img {
-  width: 35px;
-  height: 35px;
-  display: flex;
-  justify-content: center;
-  border-radius: 50%;
-  overflow: hidden;
-}
-
-.header_img img {
-  width: 40px;
-}
-
-.l-navbar {
-  position: fixed;
-  top: 0;
-  left: -30%;
-  margin: 0;
-
-  width: var(--nav-width);
-  height: 100vh;
-  background-color: white;
-  padding: 0.5rem 0.5rem;
-  transition: 0.5s;
-  z-index: var(--z-fixed);
-}
-.nav {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  overflow: hidden;
-}
-.nav_logo,
-.nav_link,
-.nav_logout {
-  display: grid;
-  grid-template-columns: max-content max-content;
-  align-items: center;
-  column-gap: 1.3rem;
-  padding: 0.5rem 0 0.5rem 1.5rem;
-}
-
-.nav_logo {
-  column-gap: 0.5rem;
-  padding: 0.5rem 0 0.5rem 0.7rem;
-}
-
-.image_logo {
-  width: 3rem;
-}
-
-.nav_logo {
-  margin-bottom: 2rem;
-}
-
-.nav_logo-name {
-  color: $font-color-grey;
-  font-weight: bold;
-  font-family: 'Ubuntu', sans-serif;
-  font-size: 1.5rem;
-}
-.nav_link,
-.nav_logout {
-  position: relative;
-  color: var(--first-color-light);
-  margin-bottom: 1.5rem;
-  transition: 0.3s;
-}
-
-.nav_logout {
-  position: relative;
-  color: white;
-  font-weight: bold;
-  background-color: $background-logout;
-  border-radius: 1rem;
-}
-
-.nav_link:hover {
-  color: var(--white-color);
-}
-.nav_icon {
-  font-size: 1.25rem;
-}
-.show {
-  left: 0;
-}
-.body-pd {
-  padding-left: calc(var(--nav-width) + 1rem);
-}
-.active {
-  color: $icon-active;
-  font-weight: bold;
-  background-color: $icon-active-background;
-  border-radius: 1rem;
-}
-.height-100 {
-  height: 100vh;
-}
-@media screen and (min-width: 768px) {
-  body {
-    margin: calc(var(--header-height) + 1rem) 0 0 0;
-    padding-left: calc(var(--nav-width) + 2rem);
-  }
-  .header {
-    height: calc(var(--header-height) + 1rem);
-    padding: 0 2rem 0 calc(var(--nav-width) + 2rem);
-  }
-  .header_img {
-    width: 40px;
-    height: 40px;
-  }
-  .header_img img {
-    width: 45px;
-  }
-  .l-navbar {
-    left: 0;
-    padding: 1rem 1rem;
-  }
-  .show {
-    width: calc(var(--nav-width) + 156px);
-  }
-  .body-pd {
-    padding-left: calc(var(--nav-width) + 188px);
-  }
 }
