--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -113,7 +113,7 @@
     </div>
     
       <footer>
-        <p><a href="https://www.linkedin.com/in/irfando-irfando-331a17232/">Copyright 2022 - Maneyfy </p>
+        <p><a href="#">Copyright 2022 - Maneyfy </p>
       </footer>
 
   </body>
