add headers and dropdown popup

--- a/src/styles/propertise/_variabels.scss
+++ b/src/styles/propertise/_variabels.scss
@@ -8,7 +8,7 @@ $breakpoint: (
 
 
 // COLOR //
-$primary-color: #5cb0f7;
+$primary-color: #42B2FA;
 
 $font-color-grey: #404040;
 
@@ -18,11 +18,10 @@ $background-light-blue: #accbec;
 $icon-active: #0093ed;
 $icon-active-background: #D4EEFF;
 
-$background-wallet: #779eb8;
+$background-wallet: #709FB9;
 $background-logout: #c75957;
 
 $background-font-income: #3bab96;
-$background-amount-wallet: #779eb8;
 $background-font-outcome: #d56e57;
 
 $background-dropdown-month: #d0e3ee;
