--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,91 +19,17 @@
   
   <body id="body-pd" tabindex="0">
   </body>
-
-  <script src="https://code.iconify.design/3/3.0.0/iconify.min.js"></script>
-
-
-  <!-- <div class="nav">
-    <div>
-      <a href="#/dashboard"><img src="${CONFIG.IMAGE_LOGO_TITLE_BLACK_PATH}" alt="Maneyfy"></a>
-      <a href="#" id="btnMenu" aria-label="menu open"><span class="material-icons">menu</span></a>
-    </div>
-    <div>
-      <a href="#/profile">
-        <div>
-          <img src="" alt="Profil ">
-          <div>
-            <p>Tegar Naufal Hanip</p>
-            <p>tegarnaufalh@gmail.com</p>
-          </div>
-        </div>
-        <p>Lihat Profil</p>
-      </a>       
-    </div>
-    <div>
-      <select name="wallet" id="wallet">
-        <option value="dompet1">
-          <img src="${CONFIG.ICON_WALLET}" alt="">
-          <p>Dompet 1</p>
-        </option>
-        <option value="dompet2">
-          <img src="${CONFIG.ICON_WALLET}" alt="">
-          <p>Dompet 2</p>
-        </option>
-      </select>
-    </div>
-    <nav class="nav">
-      <ul class="nav_list">
-        <li class="nav_item"><a href="#/dashboard"><span class="iconify" data-icon="ion:home"></span> Dashboard</a></li>
-        <li class="nav_item"><a href="#/tips"><span class="iconify" data-icon="mdi:idea"></span> Tips</a></li>
-      </ul>
-    </nav>
-    <a href="#" class="nav_link">
-      <i class='bx bx-log-out nav_icon'></i>
-      <span class="nav_name">Keluar Akun</span>
-    </a>
-  </div> -->
-
-  <!-- <div class="l-navbar" id="nav-bar">
-    <nav class="nav">
-      <div>
-        <a href="#" class="nav_logo">
-          <i class='bx bx-layer nav_logo-icon'></i>
-          <span class="nav_logo-name">BBBootstrap</span>
-        </a>
-        <div class="nav_list">
-          <a href="#" class="nav_link active">
-            <i class='bx bx-grid-alt nav_icon'></i>
-            <span class="nav_name">Dashboard</span>
-          </a>
-          <a href="#" class="nav_link">
-            <i class='bx bx-user nav_icon'></i>
-            <span class="nav_name">Users</span>
-          </a>
-          <a href="#" class="nav_link">
-            <i class='bx bx-message-square-detail nav_icon'></i>
-            <span class="nav_name">Messages</span>
-          </a>
-          <a href="#" class="nav_link">
-            <i class='bx bx-bookmark nav_icon'></i>
-            <span class="nav_name">Bookmark</span>
-          </a>
-          <a href="#" class="nav_link">
-            <i class='bx bx-folder nav_icon'></i>
-            <span class="nav_name">Files</span>
-          </a>
-          <a href="#" class="nav_link">
-            <i class='bx bx-bar-chart-alt-2 nav_icon'></i>
-            <span class="nav_name">Stats</span>
-          </a>
-        </div>
-      </div>
-      <a href="#" class="nav_link">
-        <i class='bx bx-log-out nav_icon'></i>
-        <span class="nav_name">SignOut</span>
-      </a>
-    </nav>
-  </div> -->
-
-  <!-- <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script> -->
 </html>
+
+<!-- <select name="wallet" id="wallet">
+    <option value="dompet1">
+      <i class='bx bxs-wallet'></i>
+      <span class="nav_name">Dompet 1</span>
+    </option>
+    <option value="dompet2">
+      <i class='bx bxs-wallet'></i>
+      <span class="nav_name">Dompet 2</span>
+    </option>
+  </select> -->
+  
+  <!-- <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script> -->
