--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,7 +39,7 @@ main {
 
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
 :root {
-  --header-height: 3rem;
+  --header-height: 4rem;
   --nav-width: 100px;
   --first-color: #ffffff;
   --first-color-light: #000000;
@@ -71,42 +71,87 @@ body {
   transition: 0.5s;
 }
 
-a {
-  text-decoration: none;
-}
+
 
 .header {
+  // border: 1px solid black;
   width: 100%;
-  height: var(--header-height);
+  max-height: var(--header-height);
   position: fixed;
+
   top: 0;
   left: 0;
+  background-color: white;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 1rem;
-  background-color: $background-very-light-blue;
+  padding: 0.5rem 1rem;
   z-index: var(--z-fixed);
   transition: 0.5s;
 }
 
-.header_toggle {
-  color: black;
-  font-size: 1.5rem;
-  cursor: pointer;
+.header-left {
+  display: flex;
+  align-items: center;
+  column-gap: 0.5rem;
+  a {
+    padding: 0.5rem;
+    padding-bottom: 3px;
+    vertical-align: middle !important;
+    i { 
+      font-size: 2rem;
+      color: black; 
+    }
+  }
+  h4 {
+    margin-bottom: 0;
+  }
 }
 
-.header_img {
-  width: 35px;
-  height: 35px;
+.header-right {
   display: flex;
-  justify-content: center;
-  border-radius: 50%;
-  overflow: hidden;
+  flex-direction: row-reverse;
+  align-items: center;
+  column-gap: 1rem;
+
+  .profile-container-ui {
+    a{
+      &:after{
+        display: none;
+      }
+    }
+  }
+
+  .profile-picture {
+    width: 45px;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
+    border-radius: 50%;
+    // overflow: hidden;
+  }
+
+  .wallet-container {
+    background-color: $background-wallet;
+    border-radius: 0.5rem;
+    padding: 10px;
+    a {
+      font-size: 14px;
+      display: flex;
+      column-gap: 5px;
+      flex-direction: row;
+      align-items: center;
+      color: white;
+      font-weight: bold;
+    }
+  }
+  
 }
+
+
 
 .header_img img {
-  width: 40px;
+  // width: 40px;
 }
 
 .l-navbar {
@@ -141,7 +186,7 @@ a {
 
 .nav_logo {
   column-gap: 0.5rem;
-  padding: 0.5rem 0 0.5rem 0.7rem;
+  padding: 0 0 0 0.7rem;
 }
 
 .image_logo {
@@ -161,7 +206,7 @@ a {
 .nav_link, .nav_logout {
   position: relative;
   color: var(--first-color-light);
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
   transition: 0.3s;
 }
 
@@ -171,6 +216,17 @@ a {
   font-weight: bold;
   background-color: $background-logout;
   border-radius: 1rem;
+  &:hover {
+    color: white;
+
+  }
+}
+
+.profile_link {
+  color: black;
+  &:hover {
+    color: black;
+  }
 }
 
 .nav_link:hover {
@@ -194,6 +250,79 @@ a {
 .height-100 {
   height: 100vh;
 }
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.profile-container {
+  position: absolute;
+	top: 70px;
+  border: 2px solid $primary-color;
+  padding: 5px;
+  border-radius: 10px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
+
+  display: grid;
+  grid-template-columns: auto 2fr;
+  grid-template-areas: 
+    "profile-element name-element"
+    "profile-element date-element"
+    "content-element content-element";
+
+  &:after{
+    content:"";
+    position: absolute;
+    top:-30px;
+    left:calc(50% - 7px);
+    border-top:15px solid transparent;
+    border-right:15px solid transparent;
+    border-bottom:15px solid #fff;
+    border-left:15px solid transparent;
+  }
+
+  .profile__image {
+    grid-area: profile-element;
+    width: 50px;
+    border-radius: 50%;
+    height: auto;
+    margin-right: 0.8rem;
+  }
+
+  .review__name {
+    grid-area: name-element;
+    align-self: end;
+    margin: 0;
+  }
+  
+  .review__date {
+    font-size: 0.8rem;
+    grid-area: date-element;
+    align-self: start;
+    margin: 0;
+  }
+
+  .review__content {
+    grid-area: content-element;
+    margin-top: 20px;
+    text-align: center;
+    margin: 0.7rem 0 0 0;
+    font-weight: bold;
+    color: $primary-color;
+  }
+
+}
+// .nav_name {
+//   display: none;
+// }
+// .show-nav-name {
+//   display: block;
+// }
+
+
+
+
 @media screen and (min-width: 768px) {
   body {
     margin: calc(var(--header-height) + 1rem) 0 0 0;
@@ -201,14 +330,14 @@ a {
   }
   .header {
     height: calc(var(--header-height) + 1rem);
-    padding: 0 2rem 0 calc(var(--nav-width) + 2rem);
+    padding: 0.5rem 2rem 0.5rem calc(var(--nav-width) + 2rem);
   }
   .header_img {
     width: 40px;
     height: 40px;
   }
   .header_img img {
-    width: 45px;
+    // width: 45px;
   }
   .l-navbar {
     left: 0;
@@ -216,6 +345,7 @@ a {
   }
   .show {
     width: calc(var(--nav-width) + 156px);
+    // width: calc(var(--nav-width) + 300px);
   }
   .body-pd {
     padding-left: calc(var(--nav-width) + 188px);
