--- a/src/styles/propertise/_helper.scss
+++ b/src/styles/propertise/_helper.scss
@@ -3,6 +3,11 @@
   vertical-align: middle !important;
 }
 
+.icon-header {
+  width: 25px;
+  height: 25px;
+}
+
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border: 1px solid rgb(185, 185, 185);
