--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,13 +14,12 @@
   </head>
   
   <body>
-    <skip-link-element></skip-link-element>
-    <header>      
-      <app-bar></app-bar>
-    </header>
 
-    <main id="mainContent" tabindex="0"></main>
-
-    
   </body>
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+    integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
+    crossorigin="anonymous">
+  </script>
 </html>
