--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,21 +9,87 @@
     <title>Maneyfy | Manage your Money Easily</title>
     <link rel="manifest" href="./manifest.json">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
     <!-- IMPORT ICON -->
     <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
   </head>
   
   <body>
-    <div class="container">
+    <!-- <div class="container-fluid">
       <div class="row">
         <div class="col">
-          Column
+          <div class="left-layout">
+            <img class="iluLogin" src="..//public/images/login.png" alt="Maneyfy-Hero-Image">
+          </div>
         </div>
         <div class="col">
-          Column
+          <div class="right-layout">
+            
+          </div>
         </div>
       </div>
-    </div>
+    </div> -->
+
+
+
+    <section class="vh-100">
+      <div class="container-fluid h-custom">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="col-md-9 col-lg-6 col-xl-5">
+            <img src="..//public/images/login.png"
+              class="img-fluid" alt="img_maneyfy_login">
+          </div>
+          <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+            <form>
+
+              <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
+                <!-- <p class="lead fw-normal mb-0 me-3">Sign in with</p> -->
+                <img class="img-fluid" src="..//public/images/logo.png" alt="">
+              </div>
+    
+              <div class="divider d-flex align-items-center my-4">
+                <p class="text-center fw-bold mx-3 mb-0">Or</p>
+              </div>
+    
+              <!-- Email input -->
+              <div class="form-outline mb-4">
+                <input type="email" id="form3Example3" class="form-control form-control-lg"
+                  placeholder="Enter a valid email address" />
+                <label class="form-label" for="form3Example3">Email address</label>
+              </div>
+    
+              <!-- Password input -->
+              <div class="form-outline mb-3">
+                <input type="password" id="form3Example4" class="form-control form-control-lg"
+                  placeholder="Enter password" />
+                <label class="form-label" for="form3Example4">Password</label>
+              </div>
+    
+              <div class="d-flex justify-content-between align-items-center">
+                <!-- Checkbox -->
+                <div class="form-check mb-0">
+                  <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
+                  <label class="form-check-label" for="form2Example3">
+                    Remember me
+                  </label>
+                </div>
+                <a href="#!" class="text-body">Forgot password?</a>
+              </div>
+    
+              <div class="text-center text-lg-start mt-4 pt-2">
+                <button type="button" class="btn btn-primary btn-lg"
+                  style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
+                <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#!"
+                    class="link-danger">Register</a></p>
+              </div>
+    
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 
   
