--- a/src/styles/pages/loginRegister/_login.scss
+++ b/src/styles/pages/loginRegister/_login.scss
@@ -5,6 +5,19 @@ flex: 1;
 height: 1px;
 background: #eee;
 }
+
+.logo {
+ // width: 500px;
+ height: 100px;
+}
+
+
+
+
+
+
+
+
 .h-custom {
 height: calc(100% - 73px);
 }
