--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -44,13 +44,13 @@
           <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
             <form>
 
-              <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
+              <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-center">
                 <!-- <p class="lead fw-normal mb-0 me-3">Sign in with</p> -->
-                <img class="img-fluid" src="..//public/images/logo.png" alt="">
+                <img class="img-fluid logo" src="..//public/images/logo-title-black.png" alt="">
               </div>
     
               <div class="divider d-flex align-items-center my-4">
-                <p class="text-center fw-bold mx-3 mb-0">Or</p>
+                <p class="text-center fw-bold mx-3 mb-0">MASUK</p>
               </div>
     
               <!-- Email input -->
