fix re design landing page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,7 +15,14 @@
 @import 'pages/landing/daftarSekarang';
 @import 'pages/landing/footer';
 @import 'components/button';
-// @import 'components/footer';
+// re design hero
+@import 'pages/landing/reDesignHero';
+// re design appbar
+@import 'pages/landing/reDesignAppBar';
+//re design feature
+@import 'pages/landing/reDesignFeature';
+//re design daftar
+@import 'pages/landing/reDesignDaftar';
 
 @import 'pages/pages-main';
 
