--- a/src/styles/pages/landing/_appbar.scss
+++ b/src/styles/pages/landing/_appbar.scss
@@ -1,150 +1,150 @@
-.header {
- position: fixed !important;
- background-color: var(--background-landing);
- width: 100%;
- z-index: 1000;
- padding: 0 15px 0 5px;
+// .header {
+//  position: fixed !important;
+//  background-color: var(--background-landing);
+//  width: 100%;
+//  z-index: 1000;
+//  padding: 0 15px 0 5px;
 
- @include media-in(desktop) {
-   padding: 0 30px 0 20px;
- }
-}
+//  @include media-in(desktop) {
+//    padding: 0 30px 0 20px;
+//  }
+// }
 
 
-.app-bar {
- display: grid;
- grid-template-columns: 1fr 2fr;
- align-items: center;
- position: sticky;
- padding: 8px 16px;
- background-color: #EEF7FF;
- display: grid;
- color: white;
- grid-template-columns: auto 1fr auto;
- gap: 10px;
- position: sticky;
- top: 0;
- z-index: 99;
+// .app-bar {
+//  display: grid;
+//  grid-template-columns: 1fr 2fr;
+//  align-items: center;
+//  position: sticky;
+//  padding: 8px 16px;
+//  background-color: #EEF7FF;
+//  display: grid;
+//  color: white;
+//  grid-template-columns: auto 1fr auto;
+//  gap: 10px;
+//  position: sticky;
+//  top: 0;
+//  z-index: 99;
  
- .logo {
-  height: 50px;
- }
+//  .logo {
+//   height: 50px;
+//  }
  
 
- .hamburger{
-   display: block;
-   text-align: right;
+//  .hamburger{
+//    display: block;
+//    text-align: right;
 
-   button {
-     width: 45px;
-     height: 45px;
-     border-radius: 8px;
-     background-color: var(--primary);
-     border: 1px solid black;
-     transition: 0.2s;
+//    button {
+//      width: 45px;
+//      height: 45px;
+//      border-radius: 8px;
+//      background-color: var(--primary);
+//      border: 1px solid black;
+//      transition: 0.2s;
 
-     &:hover {
-       cursor: pointer;
-       background-color: var(--primarySemiDark);
-     }
+//      &:hover {
+//        cursor: pointer;
+//        background-color: var(--primarySemiDark);
+//      }
 
-     &:active {
-       background-color: var(--primaryDark);
-     }
+//      &:active {
+//        background-color: var(--primaryDark);
+//      }
 
-     span {
-       padding: 0.5rem 0.5rem;
-     }
-   }
+//      span {
+//        padding: 0.5rem 0.5rem;
+//      }
+//    }
 
-   @include media-in(tablet) {
-     display: none;
-   }
+//    @include media-in(tablet) {
+//      display: none;
+//    }
 
-   @include media-in(desktop) {
-     display: none;
-   }
- }
+//    @include media-in(desktop) {
+//      display: none;
+//    }
+//  }
 
- .nav {
-   grid-column: 3/-1;
- }
-}
+//  .nav {
+//    grid-column: 3/-1;
+//  }
+// }
 
-.nav_list {
- background-color: var(--bgColorHeaderFooter);
- height: 100%;
- width: 100%;
- position: fixed;
- top: 64px;
- right: 0;
- overflow-x: hidden;
- transition: 0.5s;
- -webkit-transform: translate(500px, 0);
- transform: translate(500px, 0);
- transition: transform 0.3s ease;
+// .nav_list {
+//  background-color: var(--bgColorHeaderFooter);
+//  height: 100%;
+//  width: 100%;
+//  position: fixed;
+//  top: 64px;
+//  right: 0;
+//  overflow-x: hidden;
+//  transition: 0.5s;
+//  -webkit-transform: translate(500px, 0);
+//  transform: translate(500px, 0);
+//  transition: transform 0.3s ease;
 
- &.open {
-   -webkit-transform: translate(0, 0);
-   transform: translate(0, 0);
-   transition: all .3s;
- }
+//  &.open {
+//    -webkit-transform: translate(0, 0);
+//    transform: translate(0, 0);
+//    transition: all .3s;
+//  }
 
- @include media-in(mobile) {
-   width: 40%;
- }
+//  @include media-in(mobile) {
+//    width: 40%;
+//  }
 
- @include media-in(tablet) {
-   display: grid;
-   grid-template-columns: repeat(3, 150px);
-   width: 100%;
-   height: auto;
-   position: static;
-   top : auto;
-   text-align: center;
-   right: auto;
-   -webkit-transform: translate(0px, 0);
-   transform: translate(0px, 0);
-   transition: transform 0.3s ease;
- }
+//  @include media-in(tablet) {
+//    display: grid;
+//    grid-template-columns: repeat(3, 150px);
+//    width: 100%;
+//    height: auto;
+//    position: static;
+//    top : auto;
+//    text-align: center;
+//    right: auto;
+//    -webkit-transform: translate(0px, 0);
+//    transform: translate(0px, 0);
+//    transition: transform 0.3s ease;
+//  }
 
- @include media-in(desktop) {
-   text-align: center;
- }
-}
+//  @include media-in(desktop) {
+//    text-align: center;
+//  }
+// }
 
-.nav_item {
- display: grid;
- margin: 20px;
- align-content: center;
- text-transform: uppercase;
+// .nav_item {
+//  display: grid;
+//  margin: 20px;
+//  align-content: center;
+//  text-transform: uppercase;
 
- a {
-   padding: 12px 27px;
-   text-decoration: none;
-   color: #404040;
-   font-weight: bold;
-   transition: 0.3s;
+//  a {
+//    padding: 12px 27px;
+//    text-decoration: none;
+//    color: #404040;
+//    font-weight: bold;
+//    transition: 0.3s;
 
-   &:hover {
-     color: black;
-   }
+//    &:hover {
+//      color: black;
+//    }
 
-   &:focus-visible {
-     color: white;
-     border: 2px solid var(--primary);
-   }
+//    &:focus-visible {
+//      color: white;
+//      border: 2px solid var(--primary);
+//    }
 
-   @include media-in(tablet) {
-     padding: 12px 0px;
-   }
- }
+//    @include media-in(tablet) {
+//      padding: 12px 0px;
+//    }
+//  }
 
- @include media-in(tablet) {
-   margin: 0;
- }
+//  @include media-in(tablet) {
+//    margin: 0;
+//  }
  
- @include media-in(desktop) {
- }
-}
+//  @include media-in(desktop) {
+//  }
+// }
 
