--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,55 +8,66 @@
 
     <title>Maneyfy | Manage your Money Easily</title>
     <link rel="manifest" href="./manifest.json">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> -->
+    <!-- <link href="../public/aos/aos.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
 
     <!-- IMPORT ICON -->
     <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
   </head>
   
   <body class="" id="mainContent" tabindex="0">
-    <header class="header">
-      <div class="app-bar">
-        <div class="brand_logo">
-          <a href="index.html">
-            <picture>
-              <!-- <source type="image/webp" srcset="${CONFIG.IMAGE_BRAND_LOGO_PATH}.webp">
-              <source type="image/png" srcset="${CONFIG.IMAGE_BRAND_LOGO_PATH}.png"> -->
-              <img class="logo"  src="..//public/images/logo-title-black.png" alt="Maneyfy">
-            </picture>
-          </a>
-        </div>
-        <div class="hamburger">
-          <button id="btnMenu" aria-label="menu open"><span class="material-icons">menu</a></button>
-        </div>
-      
-        <nav id="drawer" class="nav">
-          <ul class="nav_list">
-            <li class="nav_item"><a href="#/home"><span class="material-icons" aria-hidden="true">home</span> Home</a></li>
-            <li class="nav_item"><a href="#/favorite"><span class="material-icons" aria-hidden="true">favorite</span> Favorite</a></li>
-            <li class="nav_item"><a href="https://github.com/TegarNH" target="_blank" rel="noopener">Login</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+    <!-- ======= Header ======= -->
+  <header id="header" class="header fixed-top">
+    <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
+
+      <a href="index.html" class="logo d-flex align-items-center">
+        <img src="..//public/images/logo-title-black.png" alt="">
+        <!-- <span>FlexStart</span> -->
+      </a>
+
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="getstarted scrollto" href="#about">Login</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+
+    </div>
+  </header><!-- End Header -->
     
     
-    <div class="heros">
-      <div class="headline">
-        <div class="headline__content">
-          <h1 class="headline__title">Kelola keuanganmu <br>dalam satu tempat</h1>
-          <p class="headline__description">Merekap, Melacak, Mengontrol, hingga mengubah<br> kebiasaan dalam mengelola keuangan dengan Maneyfy.</p>
-          <button class="headline__button">Pelajari</button>
+    <!-- ======= Hero Section ======= -->
+  <section id="hero" class="hero d-flex align-items-center">
+
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 d-flex flex-column justify-content-center">
+          <h1 data-aos="fade-up">Kelola keuanganmu<br>Dalam satu tempat</h1>
+          <h2 data-aos="fade-up" data-aos-delay="400">Merekap, Melacak, Mengontrol, hingga mengubah kebiasaan dalam mengelola keuangan dengan Maneyfy</h2>
+          <div data-aos="fade-up" data-aos-delay="600">
+            <div class="text-center text-lg-start">
+              <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
+                <span>Pelajari</span>
+                <i class="bi bi-arrow-right"></i>
+              </a>
+            </div>
+          </div>
         </div>
-        <figure class="headline__figure">
-          <img src="..//public/images/heros/hero-large.png" alt="Maneyfy-Hero-Image">
-        </figure>
+        <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
+          <img src="..//public/images/heros/hero-large.png" class="img-fluid" alt="">
+        </div>
       </div>
     </div>
 
-    <div class="fitur">
+  </section><!-- End Hero -->
+
+    <!-- <div class="fitur">
       <h1 class="title__main">Kenapa Memilih Maneyfy ?</h1>
       <div class="main-fitur">
           <div class="fitur__content">
@@ -64,7 +75,7 @@
             <p class="fitur__description">Kamu bisa menambahkan dompet tanpa batas<br>untuk memisahkan setiap kebutuhanmu.</p>
           </div>
           <figure class="fitur__figure">
-            <img src="..//public/images/fitur/fitur-1.png" alt="Maneyfy-Hero-Image">
+            <img class="img-fliud" src="..//public/images/fitur/fitur-1.png" alt="Maneyfy-Hero-Image">
           </figure>
       </div>
 
@@ -110,11 +121,91 @@
           <img src="..//public/images/fitur/growth.png" alt="Maneyfy-Hero-Image">
         </figure>
       </div>
+    </div> -->
+
+    <!-- ======= Features Section ======= -->
+    <section id="features" class="features">
+
+      <div class="container" data-aos="fade-up">
+
+        <header class="section-header">
+          <h1>Kenapa Pilih Maneyfy ?</h1>
+        </header>
+
+        <!-- Feature 1 -->
+        <div class="row feture-tabs" data-aos="fade-up">
+          <div class="col-lg-6 content">
+            <h3>Tambahkan dompet sesukamu</h3>
+            <p>Kamu bisa menambahkan dompet tanpa batas untuk memisahkan setiap kebutuhanmu</p>
+          </div>
+          <div class="col-lg-6">
+            <img src="..//public//images/fitur/fitur-1.png" class="img-fluid image-features" alt="fitur_1_maneyfy">
+          </div>
+        </div> <!-- End Feature 1 -->
+
+        <!-- Feature 2 -->
+        <div class="row feture-tabs" data-aos="fade-up">
+          <div class="col-lg-6">
+            <img src="..//public//images/fitur/fitur-2.png" class="img-fluid" alt="fitur_1_maneyfy">
+          </div>
+          <div class="col-lg-6 content">
+            <h3>Lihat laporan pencatatan dengan mudah</h3>
+            <p>Riwayat pencatatan didesain agar kamu dapat mengetahui laporan pencatatan dengan mudah setiap bulannya</p>
+          </div>
+        </div> <!-- End Feature 2 -->
+
+        <!-- Feature 3 -->
+        <div class="row feture-tabs" data-aos="fade-up">
+          <div class="col-lg-6 content">
+            <h3>Kategori membantumu lebih fokus</h3>
+            <p>Kamu dapat mengelompokkan pencatatan berdasarkan kategori. Selain itu kamu juga dapat menambahkan kategori baru sesuai kebutuhanmu</p>
+          </div>
+          <div class="col-lg-6">
+            <img src="..//public//images/fitur/fitur-3.png" class="img-fluid" alt="fitur_1_maneyfy">
+          </div>
+        </div> <!-- End Feature 3 -->
+
+        <!-- Feature 4 -->
+        <div class="row feture-tabs" data-aos="fade-up">
+          <div class="col-lg-6">
+            <img src="..//public//images/fitur/fitur-4.png" class="img-fluid" alt="fitur_1_maneyfy">
+          </div>  
+          <div class="col-lg-6 content">
+            <h3>Ubah kebiasaan buruk dalam mengatur keuangan</h3>
+            <p>Kamu dapat mengelompokkan pencatatan berdasarkan kategori. Selain itu kamu juga dapat menambahkan kategori baru sesuai kebutuhanmu</p>
+          </div>
+        </div> <!-- End Feature 4 -->
+
+      </div>
+
+    </section><!-- End Features Section -->
+
+    <div class="daftar d-flex align-items-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 d-flex flex-column justify-content-center">
+            <h1 data-aos="fade-up">Nikmati kemudahan dalam<br>melakukan pencatatan<br>keuangan bersama<br>Maneyfy</h1>
+            <div data-aos="fade-up" data-aos-delay="600">
+              <div class="text-center text-lg-start">
+                <a href="#about" class="btn-get-register scrollto d-inline-flex align-items-center justify-content-center align-self-center">
+                  <span>Daftar </span>
+                  <i class="bi bi-arrow-right"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 daftar-img" data-aos="zoom-out" data-aos-delay="200">
+            <img src="..//public/images/fitur/growth.png" class="img-fluid" alt="">
+          </div>
+        </div>
+      </div>
     </div>
+
+    
     
       <footer>
         <p><a href="#">Copyright 2022 - Maneyfy </p>
       </footer>
-
+  
   </body>
 </html>
