--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -32,10 +32,9 @@
       </a>
 
       <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="getstarted scrollto" href="#about">Login</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
+        
+        <a class="getstarted scrollto" href="#about">Login</a>
+        
       </nav><!-- .navbar -->
 
     </div>
@@ -67,62 +66,6 @@
 
   </section><!-- End Hero -->
 
-    <!-- <div class="fitur">
-      <h1 class="title__main">Kenapa Memilih Maneyfy ?</h1>
-      <div class="main-fitur">
-          <div class="fitur__content">
-            <h1 class="title-fitur1">Tambahkan dompet<br>sesukamu</h1>
-            <p class="fitur__description">Kamu bisa menambahkan dompet tanpa batas<br>untuk memisahkan setiap kebutuhanmu.</p>
-          </div>
-          <figure class="fitur__figure">
-            <img class="img-fliud" src="..//public/images/fitur/fitur-1.png" alt="Maneyfy-Hero-Image">
-          </figure>
-      </div>
-
-      <div class="main-fitur">
-        <div class="fitur__content-right">
-          <h1 class="title-fitur1">Lihat laporan pencatatan<br>dengan mudah</h1>
-          <p class="fitur__description">Riwayat pencatatan didesain agar kamu dapat<br>mengetahui laporan pencatatan dengan<br>mudah setiap bulannya.</p>
-        </div>
-        <figure class="fitur__figure report_img">
-          <img src="..//public/images/fitur/fitur-2.png" alt="Maneyfy-Hero-Image">
-        </figure>
-      </div>
-
-      <div class="main-fitur">
-        <div class="fitur__content">
-          <h1 class="title-fitur1">Kategori membantumu<br>lebih fokus</h1>
-          <p class="fitur__description">Anda dapat mengelompokkan pencatatan berdasarkan kategori.<br>Selain itu kamu juga dapat menambahkan kategori<br>baru sesuai kebutuhanmu.</p>
-        </div>
-        <figure class="fitur__figure">
-          <img src="..//public/images/fitur/fitur-3.png" alt="Maneyfy-Hero-Image">
-        </figure>
-      </div>
-
-      <div class="main-fitur">
-        <div class="fitur__content-right">
-          <h1 class="title-fitur1">Ubah kebiasaan buruk dalam mengatur keuangan</h1>
-          <p class="fitur__description">Maneyfy dapat memberikan kamu tips dan saran, sehingga membantu kamu tetap konsisten<br>dalam mengelola keuangan.</p>
-        </div>
-        <figure class="fitur__figure">
-          <img src="..//public/images/fitur/fitur-4.png" alt="Maneyfy-Hero-Image">
-        </figure>
-      </div>
-
-    </div>
-
-    <div class="daftar">
-      <div class="heading">
-        <div class="heading__daftar">
-          <h1 class="heading__title">Nikmati kemudahan dalam<br>melakukan pencatatan<br>keuangan bersama Maneyfy</h1>
-          <button class="heading__button">Daftar Sekarang</button>
-        </div>
-        <figure class="heading__figure">
-          <img src="..//public/images/fitur/growth.png" alt="Maneyfy-Hero-Image">
-        </figure>
-      </div>
-    </div> -->
-
     <!-- ======= Features Section ======= -->
     <section id="features" class="features">
 
@@ -144,7 +87,7 @@
         </div> <!-- End Feature 1 -->
 
         <!-- Feature 2 -->
-        <div class="row feture-tabs" data-aos="fade-up">
+        <div class="row feture-tabs reverse" data-aos="fade-up">
           <div class="col-lg-6">
             <img src="..//public//images/fitur/fitur-2.png" class="img-fluid" alt="fitur_1_maneyfy">
           </div>
@@ -166,7 +109,7 @@
         </div> <!-- End Feature 3 -->
 
         <!-- Feature 4 -->
-        <div class="row feture-tabs" data-aos="fade-up">
+        <div class="row feture-tabs reverse" data-aos="fade-up">
           <div class="col-lg-6">
             <img src="..//public//images/fitur/fitur-4.png" class="img-fluid" alt="fitur_1_maneyfy">
           </div>  
