--- a/src/styles/pages/landing/_reDesignFeature.scss
+++ b/src/styles/pages/landing/_reDesignFeature.scss
@@ -68,3 +68,10 @@
    padding: 8px;
  }
 }
+
+@media (max-width: 768px) {
+  .reverse {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
