--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,20 +16,5 @@
     <script src="https://code.iconify.design/3/3.0.0/iconify.min.js"></script>
   </head>
   
-  <body id="body-pd" tabindex="0">
-  </body>
-
-  
-  
+  <body id="body-pd" tabindex="0"></body>
 </html>
-
-<!-- <select name="wallet" id="wallet">
-    <option value="dompet1">
-      <i class='bx bxs-wallet'></i>
-      <span class="nav_name">Dompet 1</span>
-    </option>
-    <option value="dompet2">
-      <i class='bx bxs-wallet'></i>
-      <span class="nav_name">Dompet 2</span>
-    </option>
-  </select> -->
