--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,8 +6,6 @@
 @import 'propertise/mixins';
 @import 'propertise/helper';
 
-// @import 'components/appbar';
-// @import 'components/button';
 // @import 'components/restaurant';
 // @import 'components/footer';
 
@@ -17,19 +15,14 @@
 * {
   padding: 0;
   margin: 0;
-  // box-sizing: border-box;
-  // font-family: 'Montserrat', sans-serif;
 }
-
-// html {
-//   background: white;
-// }
 
 body {
   width: 100%;
   scroll-behavior: smooth;
   position: relative;
-  min-height: 100vh;
+  font-family: 'Montserrat', sans-serif;
+  // min-height: 100vh;
 }
 
 main {
@@ -38,417 +31,7 @@ main {
   background-color: $background-very-light-blue;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
-:root {
-  --header-height: 4rem;
-  --nav-width: 100px;
-  --first-color: #ffffff;
-  --first-color-light: #000000;
-  --white-color: #0093ed;
-  // --body-font: "Nunito", sans-serif;
-  --normal-font-size: 1rem;
-  --z-fixed: 100;
-}
-
-*,
-::before,
-::after {
-  // padding: 0;
-  // margin: 0;
-  box-sizing: border-box;
-}
-
-.large {
-  font-size: 1.5rem;
-}
-
-body {
-  position: relative;
-  margin: var(--header-height) 0 0 0;
-  // padding: 0;
-  background-color: $background-very-light-blue;
-  font-family: 'Montserrat', sans-serif;
-  font-size: var(--normal-font-size);
-  transition: 0.5s;
-}
-
-
-
-.header {
-  // border: 1px solid black;
-  width: 100%;
-  max-height: var(--header-height);
-  position: fixed;
-
-  top: 0;
-  left: 0;
-  background-color: white;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0.5rem 1rem;
-  z-index: var(--z-fixed);
-  transition: 0.5s;
-}
-
-.header-left {
-  display: flex;
-  align-items: center;
-  column-gap: 0.5rem;
-  a {
-    padding: 0.5rem;
-    padding-bottom: 3px;
-    vertical-align: middle !important;
-    i { 
-      font-size: 2rem;
-      color: black; 
-    }
-  }
-  h4 {
-    margin-bottom: 0;
-  }
-}
-
-.header-right {
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
-  column-gap: 1rem;
-
-  .profile-container-ui {
-    a{
-      &:after{
-        display: none;
-      }
-    }
-    .dropdown-menu.show {
-      transform: translate3d(0px, 70px, 0px) !important;
-      position: absolute;
-      min-width: 16rem;  // antisipasi jika nama atau email user pendek
-      top: 70px;
-      border: 2px solid $primary-color;
-      padding: 1rem 1rem 0.5rem 1rem;
-      border-radius: 10px;
-      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
-    
-      display: grid;
-      grid-template-columns: auto 2fr;
-      grid-template-areas: 
-        "profile-element name-element"
-        "profile-element date-element"
-        "content-element content-element";
-    
-      &:after{
-        content:"";
-        position: absolute;
-        // border: 2px solid $primary-color;
-        top:-32px;
-        right:calc(0% + 5px);
-        border-top:15px solid transparent;
-        border-right:15px solid transparent;
-        border-bottom:15px solid $primary-color;
-        border-left:15px solid transparent;
-      }
-    
-      .profile__image {
-        grid-area: profile-element;
-        width: 50px;
-        border-radius: 50%;
-        height: auto;
-        margin-right: 0.8rem;
-      }
-    
-      .review__name {
-        grid-area: name-element;
-        align-self: end;
-        line-height: 1.2; // antisipasi jika nama user panjang
-        margin: 0;
-      }
-      
-      .review__date {
-        font-size: 0.8rem;
-        grid-area: date-element;
-        align-self: start;
-        margin: 0;
-        margin-top: 4px;
-      }
-    
-      .review__content {
-        grid-area: content-element;
-        padding: 10px 0;
-        text-align: center;
-        font-weight: bold;
-        color: $primary-color;
-      }
-    }
-  }
-
-  .profile-picture {
-    width: 45px;
-    // display: flex;
-    // align-items: center;
-    // justify-content: center;
-    border-radius: 50%;
-    // overflow: hidden;
-  }
-
-  .wallet-container {
-    background-color: $background-wallet;
-    border-radius: 0.5rem;
-    padding: 10px;
-
-    .dropdown-menu.show {
-      transform: translate3d(-12px, 70px, 0px) !important;
-      position: absolute;
-      // top: 70px;
-      // border: 2px solid $primary-color;
-      padding: 0.5rem 1rem;
-      background-color: $background-wallet;
-      color: white;
-      font-weight: 600;
-      // border-radius: 10px;
-      // box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
-    
-      // display: grid;
-      // grid-template-columns: auto 2fr;
-      // grid-template-areas: 
-      //   "profile-element name-element"
-      //   "profile-element date-element"
-      //   "content-element content-element";
-    
-      &:after{
-        content:"";
-        position: absolute;
-        // border: 2px solid $primary-color;
-        top:-30px;
-        left:calc(50% - 10px);
-        border-top:15px solid transparent;
-        border-right:15px solid transparent;
-        border-bottom:15px solid $background-wallet;
-        border-left:15px solid transparent;
-      }
-    
-      .container {
-        display: block;
-        position: relative;
-        padding-left: 30px;
-        padding-block: 10px;
-        // margin-block: 8px;
-        cursor: pointer;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-      
-      /* Hide the browser's default radio button */
-      .container input {
-        position: absolute;
-        opacity: 0;
-        cursor: pointer;
-      }
-      
-      /* Create a custom radio button */
-      .checkmark {
-        position: absolute;
-        top: 11px;
-        left: 0;
-        height: 20px;
-        width: 20px;
-        border: 2px solid white;
-        border-radius: 50%;
-      }
-      
-      /* On mouse-over, add a grey background color */
-      .container:hover input ~ .checkmark {
-        background-color: #ccc;
-      }
-      
-      /* When the radio button is checked, add a blue background */
-      .container input:checked ~ .checkmark {
-      
-      }
-      
-      /* Create the indicator (the dot/circle - hidden when not checked) */
-      .checkmark:after {
-        content: "";
-        position: absolute;
-        display: none;
-      }
-      
-      /* Show the indicator (dot/circle) when checked */
-      .container input:checked ~ .checkmark:after {
-        display: block;
-      }
-      
-      /* Style the indicator (dot/circle) */
-      .container .checkmark:after {
-         top: 3px;
-        left: 3px;
-        width: 10px;
-        height: 10px;
-        border-radius: 50%;
-        background-color: white;
-      }
-    }
-
-    a {
-      font-size: 14px;
-      display: flex;
-      column-gap: 5px;
-      flex-direction: row;
-      align-items: center;
-      color: white;
-      font-weight: bold;
-    }
-  }
-  
-}
-
-
-
-.header_img img {
-  // width: 40px;
-}
-
-.l-navbar {
-  position: fixed;
-  top: 0;
-  left: -30%;
-  margin: 0;
-
-  width: var(--nav-width);
-  height: 100vh;
-  background-color: white;
-  padding: 0.5rem 0.5rem;
-  transition: 0.5s;
-  z-index: var(--z-fixed);
-}
-.nav {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  overflow: hidden;
-}
-.nav_logo,
-.nav_link,
-.nav_logout {
-  display: grid;
-  grid-template-columns: max-content max-content;
-  align-items: center;
-  column-gap: 1.3rem;
-  padding: 0.7rem 0 0.7rem 1.5rem;
-}
-
-.nav_logo {
-  column-gap: 0.5rem;
-  padding: 0 0 0 0.7rem;
-}
-
-.image_logo {
-  width: 3rem;
-}
-
-.nav_logo {
-  margin-bottom: 2rem;
-}
-
-.nav_logo-name {
-  color: $font-color-grey;
-  font-weight: bold;
-  font-family: 'Ubuntu', sans-serif;
-  font-size: 1.5rem;
-}
-.nav_link, .nav_logout {
-  position: relative;
-  color: var(--first-color-light);
-  margin-bottom: 1rem;
-  transition: 0.3s;
-}
-
-.nav_logout {
-  position: relative;
-  color: white;
-  font-weight: bold;
-  background-color: $background-logout;
-  border-radius: 1rem;
-  &:hover {
-    color: white;
-
-  }
-}
-
-.profile_link {
-  color: black;
-  &:hover {
-    color: black;
-  }
-}
-
-.nav_link:hover {
-  color: var(--white-color);
-}
-.nav_icon {
-  font-size: 1.25rem;
-}
-.show-navbar {
-  left: 0;
-}
-.body-pd {
-  padding-left: calc(var(--nav-width) + 1rem);
-}
-.active {
-  color: $icon-active;
-  font-weight: bold;
-  background-color: $icon-active-background;
-  border-radius: 1rem;
-}
-.height-100 {
-  height: 100vh;
-}
-
 a {
   text-decoration: none;
   cursor: pointer;
-}
-
-
-// .nav_name {
-//   display: none;
-// }
-// .show-nav-name {
-//   display: block;
-// }
-
-
-
-
-@media screen and (min-width: 768px) {
-  body {
-    margin: calc(var(--header-height) + 1rem) 0 0 0;
-    padding-left: calc(var(--nav-width) + 2rem);
-  }
-  .header {
-    height: calc(var(--header-height) + 1rem);
-    padding: 0.5rem 2rem 0.5rem calc(var(--nav-width) + 2rem);
-  }
-  .header_img {
-    width: 40px;
-    height: 40px;
-  }
-  .header_img img {
-    // width: 45px;
-  }
-  .l-navbar {
-    left: 0;
-    padding: 1rem 1rem;
-  }
-  .show-navbar {
-    width: calc(var(--nav-width) + 156px);
-    // width: calc(var(--nav-width) + 300px);
-  }
-  .body-pd {
-    padding-left: calc(var(--nav-width) + 188px);
-  }
 }
