--- a/src/styles/propertise/_helper.scss
+++ b/src/styles/propertise/_helper.scss
@@ -8,6 +8,10 @@
   height: 25px;
 }
 
+.large {
+  font-size: 1.5rem;
+}
+
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border: 1px solid rgb(185, 185, 185);
