--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -17,42 +17,27 @@
   </head>
   
   <body>
-    <!-- <div class="container-fluid">
-      <div class="row">
-        <div class="col">
-          <div class="left-layout">
-            <img class="iluLogin" src="..//public/images/login.png" alt="Maneyfy-Hero-Image">
-          </div>
-        </div>
-        <div class="col">
-          <div class="right-layout">
-            
-          </div>
-        </div>
-      </div>
-    </div> -->
 
 
 
     <section class="vh-100">
       <div class="container-fluid h-custom">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-          <div class="col-md-9 col-lg-6 col-xl-5">
+        <div class="row h-100">
+
+          <div class="col-lg-6">
             <img src="..//public/images/login.png"
               class="img-fluid" alt="img_maneyfy_login">
           </div>
-          <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+          <div class="col-lg-6 form-input">
             <form>
-
-              <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-center">
-                <!-- <p class="lead fw-normal mb-0 me-3">Sign in with</p> -->
+              <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-center head">
                 <img class="img-fluid logo" src="..//public/images/logo-title-black.png" alt="">
               </div>
     
               <div class="divider d-flex align-items-center my-4">
                 <p class="text-center fw-bold mx-3 mb-0">MASUK</p>
               </div>
-    
+              
               <!-- Email input -->
               <div class="form-outline mb-4">
                 <input type="email" id="form3Example3" class="form-control form-control-lg"
@@ -66,25 +51,17 @@
                   placeholder="Enter password" />
                 <label class="form-label" for="form3Example4">Password</label>
               </div>
-    
-              <div class="d-flex justify-content-between align-items-center">
-                <!-- Checkbox -->
-                <div class="form-check mb-0">
-                  <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
-                  <label class="form-check-label" for="form2Example3">
-                    Remember me
-                  </label>
-                </div>
-                <a href="#!" class="text-body">Forgot password?</a>
-              </div>
-    
-              <div class="text-center text-lg-start mt-4 pt-2">
-                <button type="button" class="btn btn-primary btn-lg"
+              
+              <div class="text-center  mt-4 pt-2 justify-content-center">
+                <button type="button" class="btn btn-primary btn-lg button-login"
                   style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-                <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#!"
-                    class="link-danger">Register</a></p>
+                  <div class="divider d-flex align-items-center my-4">
+                    <p class="text-center fw-bold mx-3 mb-0">BELUM PUNYA AKUN ?</p>
+                  </div>
+                <button type="button" class="btn btn-primary btn-lg button-register"
+                  style="padding-left: 2.5rem; padding-right: 2.5rem;">Register</button>
               </div>
-    
+              
             </form>
           </div>
         </div>
