--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,10 +9,10 @@
 @import 'propertise/mixins';
 @import 'propertise/helper';
 
-@import 'pages/landing/appbar';
-@import 'pages/landing/hero';
-@import 'pages/landing/fiturImageRight';
-@import 'pages/landing/daftarSekarang';
+// @import 'pages/landing/appbar';
+// @import 'pages/landing/hero';
+// @import 'pages/landing/fiturImageRight';
+// @import 'pages/landing/daftarSekarang';
 @import 'pages/landing/footer';
 @import 'components/button';
 // re design hero
